# sqly

./: .gitignore  README.md  pyproject.toml
examples/: select_lex.txt  select_yacc.txt
sqly/: lex.py  lex_select.py  utils.py  yacc.py
tests/: test_sqly.py
